# edb

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  edb.md  lib.rs  notes.md  thoughts
DEMO/DEPLOY/deploy/: Cargo.toml
DEMO/DEPLOY/deploy/src/: main.rs
DEMO/DEPLOY/example/: example.abi  example.bytecode  example.sol
DEMO/DEPLOY/simple/: simple.bytecode  simple.sol
compiler/: Cargo.toml  README.md  thoughts.md
compiler/src/: README.md  code_file.rs  contract.rs  err.rs  lib.rs  main.rs  map.rs  solidity.rs  source_map.rs  types.rs  vyper.rs
compiler/src/map/: grammar.pest  rando.sh  test_contract.txt  utf8-test.txt
compiler/src/solidity/: ast.rs  err.rs  source_map.rs  standard_json.rs
compiler/src/solidity/standard_json/: input.rs  output  output.rs
compiler/src/test_files/: simple.sol
compiler/src/vyper/: binds.rs  err.rs
compiler/vyper/: Cargo.toml  README.md
compiler/vyper/src/: binds.rs  lib.rs
compiler/vyper/src/types/: parse.rs
core/: Cargo.toml
core/src/: addr_cache.rs  debug.rs  lib.rs
edb/: README.md  conf.rs  err.rs  lib.rs  main.rs  ops.rs  provider.rs  rpc.rs  shell.rs  simple.sol  test.sh  ui.rs
edb-core/: Cargo.toml  README.md
edb-core/src/: addr_cache.rs  debug.rs  err.rs
edb-core/tests/: common.rs
edb/conf/: cli.rs  cli_args.yml  err.rs  helpers.rs  types.rs
edb/rpc/: methods.rs
edb/shell/: builder.rs  client.rs  commands.rs  err.rs  helpers.rs  ops.rs  provider.rs  types.rs
edb/ui/: events.rs  tabs.rs
emul/: Cargo.toml  README.md
emul/src/: client.rs  debug_client.rs  debug_executive.rs  debug_externalities.rs  debug_handler.rs  emul.rs  emulator.rs  err.rs  evm.rs  executive.rs  externalities.rs  factory.rs  instruction_manager.rs  lib.rs  simpledb.rs
emul/src/extensions/: README.md  executive_ext.rs  factory_ext.rs  figure  interpreter-ext.rs  interpreter_ext.rs  mod.rs
emul/src/extensions/evm_ext/: factory_ext.rs  mod.rs
emul/src/extensions/executive_utils/: mod.rs
emul/src/tests/: fake_ext.rs  latest.json  mock.rs  mod.rs
emul/src/tests/solidity/simple.bin/: SimpleStorage.bin-dep
emul/src/utils/: mod.rs
emul2/: Cargo.toml  TODO.md
emul2/src/: emulator.rs  err.rs  lib.rs  mock.rs  scary.rs
emul2/src/tests/: mock.rs
solc_api/: Cargo.toml  README.md
solc_api/src/: err.rs  lib.rs
solc_api/src/internal_types/: input.rs  output.rs
solc_api/src/types/: output.rs
test_helpers/: Cargo.toml  README.md
test_helpers/src/: lib.rs  mock.rs  types.rs
test_helpers/src/contracts/solidity/: ast_schema.json
test_helpers/src/contracts/solidity/imports/: SimpleStorage.bin-runtime  SimpleStorageTwo.bin-runtime  input.json  out.json  output.json  simple.sol
test_helpers/src/contracts/solidity/simple/: SimpleStorage.bin-runtime  simple.ast
test_helpers/src/contracts/solidity/voting/: Ballot.abi  Ballot.bin-runtime  output.json
test_helpers/src/contracts/vyper/voting/: voting.asm  voting.bytecode  voting.bytecode_runtime  voting.ir  voting.json  voting.vy
testrpc/: Cargo.toml  README.md
testrpc/src/: main.rs
tests/: common.rs
tests/contracts/solidity/imports/: importing.sol  input.json  out.json  simple.sol
tests/contracts/solidity/voting/: input.json  srcmap_runtime.json  voting.abi  voting.ast  voting.ast.json  voting.bin-runtime  voting.sol
tests/contracts/vyper/voting/: voting.abi
vyper/src/: binds.rs  err.rs
vyper/src/types/: parse.rs
