[package]
description = "Ethereum Debug"
name = "edb"
version = "0.0.1"
license = "GPL-3.0"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
edition = '2018'


[[bin]]
path = "edb/main.rs"
name = "edb"

[workspace]
members = [
  "compiler/",
  "core",
  "emul/",
  "solc_api",
  "test_helpers",
]

[dependencies]
# vyper = { path = "./vyper" }
termion = "1.5"
clap = { version = "2.32", features = ["yaml"] }
http = "0.1"
tokio-core = "0.1"
futures = "0.1.23"
failure = "0.1.2"
log = "*"
fern = { version = "0.5", features = ["colored"] }
colored = "1.6.1"
dirs = "1.0.4"
chrono = "0.4"
serde = "1.0.78"
serde_json = "1.0.27"
serde_derive = "1.0.78"
hex = "0.3"
ethereum-types = "0.4.0"
ethabi = "6.1.0"
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
edb-core = { path = "./core" }

[dev-dependencies]
edb_test_helpers = { path = "./test_helpers" }
