[package]
description = "Ethereum Debug"
name = "edb"
version = "0.0.1"
license = "GPL-3.0"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
edition = '2018'


[[bin]]
path = "edb/main.rs"
name = "edb"

[workspace]
members = [
  "compiler/",
  "core",
  "emul/",
  "solc_api",
  "test_helpers",
  "DEMO/DEPLOY/deploy"
]

[dependencies]
# vyper = { path = "./vyper" }
termion = "1.5"
clap = { version = "2.32", features = ["yaml"] }
http = "0.1"
tokio-core = "0.1"
futures = "0.1"
failure = "0.1"
log = "*"
fern = { version = "0.5", features = ["colored"] }
colored = "1.6"
dirs = "1.0"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hex = "0.3"
ethereum-types = "0.4"
etcommon-bigint = "0.2.9"
bytes = "0.4"
ethabi = "6.1"
web3 = "0.5"
sputnikvm = "0.10.1"
jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc" }
jsonrpc-minihttp-server = { git = "https://github.com/paritytech/jsonrpc" }
edb-core = { path = "./core" }

[dev-dependencies]
edb_test_helpers = { path = "./test_helpers" }

