[package]
name = "edb-compiler"
version = "0.1.0"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
edition = '2018'


[dependencies]
failure = "0.1.2"
log = "*"
pretty_env_logger = "*"
solc = { git = "https://github.com/InsidiousMind/rust_solc", branch = "insi_add-whitelisted-paths" }
solc_api = { path = "../solc_api" }
ethereum-types = "0.4.0"
serde_json = "1.0.27"
serde_derive = "1.0.78"
serde = "1.0.78"
ethabi = "6.0.1"
itertools = "0.7.8"
codespan = "0.1.3"
web3 = "0.4.0"
delegate = "0.1.3"

[dev-dependencies]
speculate = { git = "https://github.com/utkarshkukreti/speculate.rs.git" }
