[package]
name = "edb-compiler"
version = "0.1.0"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
edition = '2018'


[dependencies]
log = "*"
failure = "0.1.2"
solc = { git = "https://github.com/InsidiousMind/rust_solc", branch = "insi_add-whitelisted-paths" }
solc_api = { path = "../solc_api" }
lunarity-ast = "0.1"
lunarity-parser = "0.1"
ethereum-types = "0.4.0"
serde_json = "1.0.27"
serde_derive = "1.0.78"
serde = "1.0.78"
ethabi = "6.0.1"
delegate = "0.1.3"
futures = "0.1.24"
itertools = "0.7.8"
web3 = { git = "https://github.com/tomusdrw/rust-web3", branch="master" }

[dev-dependencies]
speculate = { git = "https://github.com/utkarshkukreti/speculate.rs.git" }
edb_test_helpers = { path = "../test_helpers" }
pretty_env_logger = "*"

