[package]
name = "edb-core"
version = "0.1.0"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
edition = "2018"

[dependencies]
edb-compiler = { path = "../compiler" }
edb-emul = { path = "../emul"}
web3 = { git = "https://github.com/InsidiousMind/rust-web3", branch = "bytes-deser" }
failure = "0.1.2"
futures = "0.1.23"
log = "*"
etcommon-bigint = "0.2.9"
ethereum-types = "0.4.0"
sputnikvm = "0.10.1"
