[package]
name = "edb-emul"
version = "0.1.0"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
edition = '2018'
license = "GPLv3"

[dependencies]
log = "0.3"
pretty_env_logger = "*"
sputnikvm = "0.10.1"
sputnikvm-network-foundation = "0.10.0"
failure = "0.1.2"
web3 = { path = "../../../rust-web3" }
futures = "0.1.24"
etcommon-bigint = "0.2.9"
ethereum-types = "0.4.0"

[dev-dependencies]
serde_json = "1.0.27"
serde = "1.0.78"
speculate = { git = "https://github.com/utkarshkukreti/speculate.rs.git" }
ethabi = "6.0.1"
jsonrpc-core = "8.0.1"
edb_test_helpers = { path = "../test_helpers/" }
hex = "*"
openssl = {version = "0.10", features = ["vendored"]}

