cargo-features = ['edition']

[package]
name = "emul2"
version = "0.1.0"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
edition = '2018'

[dependencies]
log = "0.3"
pretty_env_logger = "*"
tempdir = "0.3"
sputnikvm = "0.10.1"
sputnikvm-network-foundation = "0.10.0"
failure = "0.1.2"
web3 = { git = "https://github.com/tomusdrw/rust-web3/" }
tokio-core = "0.1.17"
futures = "0.1.24"
etcommon-bigint = "0.2.9"
ethereum-types = "0.4.0"
jsonrpc-core = "8.0.1"
serde = "1.0.78"
serde_json = "1.0.27"
serde_derive = "1.0.70"
flate2 = "1.0.2"

[dev-dependencies]
speculate = { git = "https://github.com/utkarshkukreti/speculate.rs.git" }
ethabi = "5.1.2"
hex = "*"
