[package]
name = "solc_api"
version = "0.1.0"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]

[dependencies]
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.28"
ethereum-types = "0.4.0"
ethabi = "6.0.1"
failure = "*"
hex = "0.3.2"
solc = { git =  "https://github.com/InsidiousMind/rust_solc", branch = "insi_add-whitelisted-paths" }
