[package]
name = "edb_test_helpers"
version = "0.1.0"
authors = ["Andrew Plaza <aplaza@liquidthink.net>"]
edition = '2018'

[dependencies]
log = "*"
pretty_env_logger = "*"
serde_json = "1.0.27"
serde_derive = "1.0.78"
serde = "1.0.78"
ethabi = "6.0.1"
web3 = { git = "https://github.com/InsidiousMind/rust-web3", branch = "bytes-deser" }
futures = "0.1.24"
jsonrpc-core = "8.0.1"
etcommon-bigint = "0.2.9"
ethereum-types = "0.4.0"

